[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/game_winner_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Game_win_gui.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Scene_Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://ScriptsWinner_GUI.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Anim_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Winner_GUI" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1200, 900 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" parent="CenterContainer" instance=ExtResource( 3 )]

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 492.0
margin_top = 415.0
margin_right = 708.0
margin_bottom = 485.0
custom_fonts/font = ExtResource( 1 )
text = "You Win !!"
align = 1
valign = 1
percent_visible = 0.0

[node name="TimerGameWin" type="Timer" parent="CenterContainer"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Transition" parent="CenterContainer" instance=ExtResource( 5 )]

[node name="TimerTransition" type="Timer" parent="CenterContainer"]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Anim_in = SubResource( 1 )
[connection signal="timeout" from="CenterContainer/TimerGameWin" to="CenterContainer" method="_on_TimerGameWin_timeout"]
[connection signal="timeout" from="CenterContainer/TimerTransition" to="CenterContainer" method="_on_TimerTransition_timeout"]
